# digital_twin_rpi4

./: README.md  digital_twin_rpi4.code-workspace  rpi4_ubuntu20.04.code-workspace  workspace.code-workspace
beginner_tutorials/: package.xml
docker/: Dockerfile  build-dokcer-image.bash  dockerfile  entrypoint.bash  run-docker-container.bash
docker/config/bashrc/: ros_config  ros_config.sh
docker/config/script/: pigpio_setup.bash
docker/config/zsh/zshrc/: ros_config.sh
example/: servo_demo_D.c  tx_RED.c  tx_WD.c
example/RED/: RED  RED_README  test_RED.c
example/SRTED/: SRTED.c  SRTED.h  SRTED_README  test_SRTED.c
example/WD/: WD.c  WD.h  WD_README  test_WD.c
example/_433D/: _433D_README  test_433D.c
example/hello_world/: build_read_cif.bash  build_read_pdif.bash  read_cif  read_cif.c  read_pdif  read_pdif.c
example/ir_hasher_cpp/: ir_hash_cpp  test_ir_hasher.cpp
example/rotary_encoder_cpp/: rot_enc_cpp  test_rotary_encoder.cpp
gpio_ctrl/: CMakeLists.txt  package.xml
gpio_ctrl/config/: motor_pin.yaml
gpio_ctrl/include/gpio_ctrl/: motor_control.h  motor_typedef.h  node_handle.h
gpio_ctrl/launch/: motor_control.launch
gpio_ctrl/msg/: MotorCmdFB.msg  MotorData.msg  MotorFB.msg
gpio_ctrl/script/: README.md  root_gpio_ctrl.bash
gpio_ctrl/src/: CMakeLists.txt  gpio_ctrl  gpio_ctrl.cpp  motor_control.cpp  node_handle.cpp
gpio_ctrl/test/: CMakeLists.txt  gpio_ctrl_test.cpp  motor_control_test.cpp
motion/: CMakeLists.txt
motion/include/serial/: serial.h
motion/src/: CMakeLists.txt
motion/src/serial/: serial.cpp
motion/test/: CMakeLists.txt
